ElastosBountyProgram/front-end/src/module/page/social/style.scss
@import "../../../style/variable";
@import "../../../style/color";

.p_Social {

  background: #ffffff;
  text-align: left;

  .d_box {
    padding: 0 $gap_3;

    .btnContainer {
      padding-top: $gap_1;
      text-align: right;

      .ant-cascader-picker-label {
        text-align: left;
      }

      .addTask {
        vertical-align: middle;
        margin-right: $gap_0;
        font-size: 150%;
        cursor: pointer;
        color: $text_dark_gray;

        &:hover {
          color: $text_light_gray;
        }
      }
    }
  }

  .ebp-page {
    .d_leftContainer {
      border-right: none;
    }
    .d_rightContainer {
      border-left: 1px solid #e0e0e0;

      @media only screen and (max-width: $lg-width) {
        border-left: none;
      }
    }
  }

  .d_socialEventsContainer {
    margin-left: -1 * $gap_2;

    .i_event {

      padding: 0 $gap_2;

      h4 {
        padding-bottom: $gap_1;
      }

      .event-date {
        padding: 0 0 $gap_1 0;
      }

      img {
        max-height: 200px;
        width: 100%;
      }
    }

    p {
      padding-top: $gap_1;
    }
  }

  table {

    > thead.ant-table-thead > tr > th {
      word-break: normal;
      white-space: nowrap;
    }

    td {
      word-break: normal;
      white-space: nowrap;
    }
  }

  .d_communities {
    text-align: left;

    min-height: 40vh;

    padding-bottom: $gap_3;

    .my-community-add-container {
      padding-top: 6px;

      > button {
        margin-right: 0;
      }
    }

    .community-link {
      color: $primary_color;
      cursor: pointer;

      &:hover {
        color: $primary_light_color
      }
    }

    .community-action {
      cursor: pointer;

      &:hover {
        color: $primary_color
      }
    }
  }
}

